Increase default heap, perm gen size.